--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 python:
     - "2.6"
@@ -15,7 +16,7 @@ install:
 
 # commands to run tests
 script:
-    - nosetests --with-doctest cyksuid
+    - PYTHONPATH=. py.test -v tests
 
 notifications:
   email: false
