--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,9 +1,9 @@
 [bumpversion]
 commit = True
 tag = True
-current_version = 0.0.1dev
+current_version = 0.0.1
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}{release}
 	{major}.{minor}.{patch}
 
@@ -11,8 +11,7 @@ serialize =
 
 [bumpversion:part:release]
 optional_value = rc
-values =
+values = 
 	dev
 	rc
-
 
