--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,13 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.py,*.pxd,*.pyx}]
+[*.{py,pxd,pyx}]
 indent_style = space
 indent_size = 4
+
+[*.yml]
+indent_style = space
+indent_size = 2
 
 [Makefile]
 indent_style = tab
