--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ serialize =
 	{major}.{minor}.{patch}{release}
 	{major}.{minor}.{patch}
 
-[bumpversion:file:cyksuid/_version.py]
+[bumpversion:file:cyksuid/__version__.py]
 
 [bumpversion:part:release]
 optional_value = rc
@@ -15,3 +15,5 @@ values =
 	dev
 	rc
 
+[metadata]
+license_file = LICENSE
