--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,35 +3,29 @@ environment:
     secure: WmAbQg/GQXggsqUZLDFO/Q==
   PYPI_PASSWORD:
     secure: Wwb9J4Z4yrV0c3UpCePa6w==
+  DISTRIBUTIONS: bdist_wheel
   matrix:
     # For Python versions available on Appveyor, see
     # https://www.appveyor.com/docs/windows-images-software/#python
     - PYTHON: "C:\\Python27"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python27-x64"
-      DISTRIBUTIONS: "bdist_wheel"
-    - PYTHON: "C:\\Python34"
-      DISTRIBUTIONS: "bdist_wheel"
-    # We have problems building Python34-x64
-    # - PYTHON: "C:\\Python34-x64"
-    #   DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python35"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python35-x64"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python36"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python36-x64"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python37"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python37-x64"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python38"
-      DISTRIBUTIONS: "bdist_wheel"
     - PYTHON: "C:\\Python38-x64"
-      DISTRIBUTIONS: "bdist_wheel"
       # For Python 3.8, we need a different image, check out available pre-installed Python
+      # and Visual Studio versions: https://www.appveyor.com/docs/linux-images-software/
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    - PYTHON: "C:\\Python39"
+      DISTRIBUTIONS: "bdist_wheel"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    - PYTHON: "C:\\Python39-x64"
+      DISTRIBUTIONS: "bdist_wheel"
+      # For Python 3.9, we need a different image, check out available pre-installed Python
       # and Visual Studio versions: https://www.appveyor.com/docs/linux-images-software/
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
 
