--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,36 +1,6 @@
-# Stolen from pyzmq project
-# PyZMQ is licensed under the terms of the Modified BSD License (also known as
-# New or Revised BSD), as follows:
-#
-# Copyright (c) 2009-2012, Brian Granger, Min Ragan-Kelley
-#
-# All rights reserved.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions are met:
-#
-# Redistributions of source code must retain the above copyright notice, this
-# list of conditions and the following disclaimer.
-#
-# Redistributions in binary form must reproduce the above copyright notice, this
-# list of conditions and the following disclaimer in the documentation and/or
-# other materials provided with the distribution.
-#
-# Neither the name of PyZMQ nor the names of its contributors may be used to
-# endorse or promote products derived from this software without specific prior
-# written permission.
-#
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
-# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-# DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
-# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
-# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
-# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
-# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
-# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+# Parts of this file were taken from the pyzmq project
+# (https://github.com/zeromq/pyzmq) which have been permitted for use under the
+# BSD license.
 
 name: Release
 
@@ -69,7 +39,7 @@ jobs:
           pip install cython=="${{ env.cython }}"
       - name: build sdist
         run: |
-          python setup.py build --with-cython
+          python setup.py cython
           python -m build --sdist .
       - uses: actions/upload-artifact@v2
         with:
@@ -154,7 +124,7 @@ jobs:
           python -m cibuildwheel . --print-build-identifiers
       - name: compile Cython sources
         run: |
-          python setup.py build --with-cython
+          python setup.py cython
       - name: build wheels
         run: |
           python -m cibuildwheel .
