--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
+dist: focal
 language: python
 python:
-  - "2.7"
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
   - "3.9"
+  - "3.10"
 
 before_install:
-  - pip install 'pip==9.0.1'
+  - pip install -U pip build
   - pip install cython pytest
 
 install:
