--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,12 @@
+[flake8]
+max-line-length = 88
+
 [bumpversion]
 commit = True
 tag = True
-current_version = 1.1.0
+current_version = 1.2.0
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}
 	{major}.{minor}.{patch}
 
@@ -11,10 +14,9 @@ serialize =
 
 [bumpversion:part:release]
 optional_value = rc
-values = 
+values =
 	dev
 	rc
 
 [metadata]
-license_file = LICENSE
-
+license_files = LICENSE
