add coverage test
Signed-off-by: Timon Wong <timon86.wang@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include cyksuid/py.typed
 include cyksuid/cbase62.*
 recursive-include cyksuid *.pyx *.pxd *.pyi
 recursive-include include *.h
+recursive-include src *
 
 global-exclude *.pyc
 global-exclude *.pyd
