--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,9 @@
+[tool:pytest]
+testpaths =
+    tests
+
 [flake8]
 max-line-length = 88
-
-[bumpversion]
-commit = True
-tag = True
-current_version = 1.3.0dev
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
-serialize =
-	{major}.{minor}.{patch}{release}
-	{major}.{minor}.{patch}
-
-[bumpversion:file:cyksuid/__version__.py]
-
-[bumpversion:part:release]
-optional_value = rc
-values =
-	dev
-	rc
 
 [metadata]
 license_files = LICENSE
