refactor to cpp
Signed-off-by: Timon Wong <timon86.wang@gmail.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{h,cc}]
+indent_size = 2
+
 [*.{py,pxd,pyx,pyi}]
 indent_style = space
 indent_size = 4
