--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,7 @@
 include setup.py README.rst MANIFEST.in LICENSE
 include cyksuid/py.typed
-include cyksuid/cbase62.*
+recursive-include cyksuid *.h *.c *.cc *.cpp
 recursive-include cyksuid *.pyx *.pxd *.pyi
-recursive-include include *.h
-recursive-include src *
 
 global-exclude *.pyc
 global-exclude *.pyd
