convert README to markdown
Signed-off-by: Timon Wong <timon86.wang@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include setup.py README.rst MANIFEST.in LICENSE
+include setup.py README.md MANIFEST.in LICENSE
 include cyksuid/py.typed
 recursive-include cyksuid *.h *.c *.cc *.cpp
 recursive-include cyksuid *.pyx *.pxd *.pyi *.py
