feat: refactor and add v2 api, with 40 and 48bits timestamp (#24)
Close #22 

* refactor to cpp

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* add tests for v2

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* fix richcmp

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* add noexcept

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* hint for cpp

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* fix missing entry in manifest

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* fix wrong suffix

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* clean

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* skip python 3.6

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* fix MACOSX_DEPLOYMENT_TARGET

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* skip build on 32bit linux

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* improve bench script

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* convert README to markdown

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* add tests for exc

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* Add v2 usage

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* remove hack about generic

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* adjust constructor, more like svix's API

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* cleanup setup.py

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* rename KsuidSvix -> Ksuid40, and create KsuidMs alias

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* add cls.from_timestamp_and_payload()

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* fix setup.py

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* add more type hint & doc

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

* fix tests

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

Signed-off-by: Timon Wong <timon86.wang@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ dist/
 wheelhouse/
 __pycache__/
 
+cython_debug/
+
 .envrc
 *.egg-info
 *.so
@@ -16,4 +18,3 @@ bench.json
 
 .coverage
 coverage.xml
-cython_debug
