--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 github_url = "https://github.com/zeromq/pyzmq"
 
 [tool.tbump.version]
-current = "2.0.0.dev"
+current = "2.0.0"
 regex = '''
   (?P<major>\d+)
   \.
