build: add circle ci for arm wheels
Signed-off-by: Timon Wong <timon86.wang@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         include:
           - os: macos-11
-            python: '3.7'
+            python: "3.7"
 
           - os: macos-11
             python: "3.10"
@@ -26,7 +26,7 @@ jobs:
             python: pypy-3.8
 
           - os: ubuntu-18.04
-            python: '3.7'
+            python: "3.7"
 
           - os: ubuntu-20.04
             python: pypy-3.8
@@ -34,27 +34,27 @@ jobs:
           - os: ubuntu-20.04
             python: pypy-3.7
 
-          - os: ubuntu-20.04
-            python: 3.7
+          # - os: ubuntu-20.04
+          #   python: "3.7"
 
-          - os: ubuntu-20.04
-            python: 3.9
+          # - os: ubuntu-20.04
+          #   python: "3.8"
 
-          - os: ubuntu-20.04
-            python: "3.10"
+          # - os: ubuntu-20.04
+          #   python: "3.9"
+
+          # - os: ubuntu-20.04
+          #   python: "3.10"
 
           - os: ubuntu-20.04
             python: "3.11.0-rc.1"
 
-          - os: ubuntu-20.04
-            python: 3.8
-
           - os: windows-2019
-            python: '3.7'
+            python: "3.7"
             arch: x86
 
           - os: windows-2019
-            python: 3.9
+            python: "3.9"
             arch: x64
 
           - os: windows-2019
