--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -38,13 +38,12 @@ on:
   push:
     branches:
       - master
+    tags:
+      - "v**"
   pull_request:
     paths:
       - setup.py
       - .github/workflows/wheels.yml
-  release:
-    types:
-      - created
   workflow_dispatch: {}
 
 env:
