--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
           #   python: "3.10"
 
           - os: ubuntu-20.04
-            python: "3.11.0-rc.1"
+            python: "3.11"
 
           - os: windows-2019
             python: "3.7"
