--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -129,10 +129,11 @@ jobs:
               arch: x86_64
               build: "*manylinux*"
 
-          - name: manylinux-i686
-            cibw:
-              arch: i686
-              build: "*manylinux*"
+          # skip due to time_t restrictions
+          # - name: manylinux-i686
+          #   cibw:
+          #     arch: i686
+          #     build: "*manylinux*"
 
           # additional manylinux variants, not specified in pyproject.toml:
           # build with newer 2_28 for cpython >= 3.10, pypy 3.9
@@ -145,6 +146,7 @@ jobs:
           - name: musllinux
             cibw:
               build: "*musllinux*"
+              skip: "*_i686"
 
           - name: win32
             os: windows-2019
